// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Task Archived 1`] = `
<li
  className="list-item TASK_ARCHIVED"
  data-testid="task-1"
>
  <label
    className="checkbox"
  >
    <input
      checked={true}
      data-testid="input-1"
      disabled={true}
      name="checked"
      type="checkbox"
    />
    <span
      aria-label="archiveTask-1"
      className="checkbox-custom"
      data-testid="clickable-1"
      id="archiveTask-1"
      onClick={[Function]}
    />
  </label>
  <label
    className="title"
  >
    <input
      data-testid="title-1"
      placeholder="Input title"
      readOnly={true}
      type="text"
      value="Testing task"
    />
  </label>
  <div
    className="actions"
    onClick={[Function]}
  />
</li>
`;

exports[`Storyshots Task Default 1`] = `
<li
  className="list-item TASK_INBOX"
  data-testid="task-1"
>
  <label
    className="checkbox"
  >
    <input
      checked={false}
      data-testid="input-1"
      disabled={true}
      name="checked"
      type="checkbox"
    />
    <span
      aria-label="archiveTask-1"
      className="checkbox-custom"
      data-testid="clickable-1"
      id="archiveTask-1"
      onClick={[Function]}
    />
  </label>
  <label
    className="title"
  >
    <input
      data-testid="title-1"
      placeholder="Input title"
      readOnly={true}
      type="text"
      value="Testing task"
    />
  </label>
  <div
    className="actions"
    onClick={[Function]}
  >
    <a
      onClick={[Function]}
    >
      <span
        aria-label="pinTask-1"
        className="icon-star"
        id="pinTask-1"
      />
    </a>
  </div>
</li>
`;

exports[`Storyshots Task Pinned 1`] = `
<li
  className="list-item TASK_PINNED"
  data-testid="task-1"
>
  <label
    className="checkbox"
  >
    <input
      checked={false}
      data-testid="input-1"
      disabled={true}
      name="checked"
      type="checkbox"
    />
    <span
      aria-label="archiveTask-1"
      className="checkbox-custom"
      data-testid="clickable-1"
      id="archiveTask-1"
      onClick={[Function]}
    />
  </label>
  <label
    className="title"
  >
    <input
      data-testid="title-1"
      placeholder="Input title"
      readOnly={true}
      type="text"
      value="Testing task"
    />
  </label>
  <div
    className="actions"
    onClick={[Function]}
  >
    <a
      onClick={[Function]}
    >
      <span
        aria-label="pinTask-1"
        className="icon-star"
        id="pinTask-1"
      />
    </a>
  </div>
</li>
`;

exports[`Storyshots TaskList Default 1`] = `
<div
  style={
    Object {
      "padding": "3rem",
    }
  }
>
  <ul
    data-testid="task-list"
  >
    <li
      className="list-item TASK_INBOX"
      data-testid="task-1"
    >
      <label
        className="checkbox"
      >
        <input
          checked={false}
          data-testid="input-1"
          disabled={true}
          name="checked"
          type="checkbox"
        />
        <span
          aria-label="archiveTask-1"
          className="checkbox-custom"
          data-testid="clickable-1"
          id="archiveTask-1"
          onClick={[Function]}
        />
      </label>
      <label
        className="title"
      >
        <input
          data-testid="title-1"
          placeholder="Input title"
          readOnly={true}
          type="text"
          value="Do the laundry"
        />
      </label>
      <div
        className="actions"
        onClick={[Function]}
      >
        <a
          onClick={[Function]}
        >
          <span
            aria-label="pinTask-1"
            className="icon-star"
            id="pinTask-1"
          />
        </a>
      </div>
    </li>
    <li
      className="list-item TASK_INBOX"
      data-testid="task-2"
    >
      <label
        className="checkbox"
      >
        <input
          checked={false}
          data-testid="input-2"
          disabled={true}
          name="checked"
          type="checkbox"
        />
        <span
          aria-label="archiveTask-2"
          className="checkbox-custom"
          data-testid="clickable-2"
          id="archiveTask-2"
          onClick={[Function]}
        />
      </label>
      <label
        className="title"
      >
        <input
          data-testid="title-2"
          placeholder="Input title"
          readOnly={true}
          type="text"
          value="Brush your teeth"
        />
      </label>
      <div
        className="actions"
        onClick={[Function]}
      >
        <a
          onClick={[Function]}
        >
          <span
            aria-label="pinTask-2"
            className="icon-star"
            id="pinTask-2"
          />
        </a>
      </div>
    </li>
    <li
      className="list-item TASK_INBOX"
      data-testid="task-3"
    >
      <label
        className="checkbox"
      >
        <input
          checked={false}
          data-testid="input-3"
          disabled={true}
          name="checked"
          type="checkbox"
        />
        <span
          aria-label="archiveTask-3"
          className="checkbox-custom"
          data-testid="clickable-3"
          id="archiveTask-3"
          onClick={[Function]}
        />
      </label>
      <label
        className="title"
      >
        <input
          data-testid="title-3"
          placeholder="Input title"
          readOnly={true}
          type="text"
          value="Finish this tutorial"
        />
      </label>
      <div
        className="actions"
        onClick={[Function]}
      >
        <a
          onClick={[Function]}
        >
          <span
            aria-label="pinTask-3"
            className="icon-star"
            id="pinTask-3"
          />
        </a>
      </div>
    </li>
    <li
      className="list-item TASK_INBOX"
      data-testid="task-4"
    >
      <label
        className="checkbox"
      >
        <input
          checked={false}
          data-testid="input-4"
          disabled={true}
          name="checked"
          type="checkbox"
        />
        <span
          aria-label="archiveTask-4"
          className="checkbox-custom"
          data-testid="clickable-4"
          id="archiveTask-4"
          onClick={[Function]}
        />
      </label>
      <label
        className="title"
      >
        <input
          data-testid="title-4"
          placeholder="Input title"
          readOnly={true}
          type="text"
          value="Cook lunch"
        />
      </label>
      <div
        className="actions"
        onClick={[Function]}
      >
        <a
          onClick={[Function]}
        >
          <span
            aria-label="pinTask-4"
            className="icon-star"
            id="pinTask-4"
          />
        </a>
      </div>
    </li>
    <li
      className="list-item TASK_INBOX"
      data-testid="task-5"
    >
      <label
        className="checkbox"
      >
        <input
          checked={false}
          data-testid="input-5"
          disabled={true}
          name="checked"
          type="checkbox"
        />
        <span
          aria-label="archiveTask-5"
          className="checkbox-custom"
          data-testid="clickable-5"
          id="archiveTask-5"
          onClick={[Function]}
        />
      </label>
      <label
        className="title"
      >
        <input
          data-testid="title-5"
          placeholder="Input title"
          readOnly={true}
          type="text"
          value="Another task"
        />
      </label>
      <div
        className="actions"
        onClick={[Function]}
      >
        <a
          onClick={[Function]}
        >
          <span
            aria-label="pinTask-5"
            className="icon-star"
            id="pinTask-5"
          />
        </a>
      </div>
    </li>
    <li
      className="list-item TASK_INBOX"
      data-testid="task-6"
    >
      <label
        className="checkbox"
      >
        <input
          checked={false}
          data-testid="input-6"
          disabled={true}
          name="checked"
          type="checkbox"
        />
        <span
          aria-label="archiveTask-6"
          className="checkbox-custom"
          data-testid="clickable-6"
          id="archiveTask-6"
          onClick={[Function]}
        />
      </label>
      <label
        className="title"
      >
        <input
          data-testid="title-6"
          placeholder="Input title"
          readOnly={true}
          type="text"
          value="Some more tasks for this poor baby"
        />
      </label>
      <div
        className="actions"
        onClick={[Function]}
      >
        <a
          onClick={[Function]}
        >
          <span
            aria-label="pinTask-6"
            className="icon-star"
            id="pinTask-6"
          />
        </a>
      </div>
    </li>
  </ul>
</div>
`;

exports[`Storyshots TaskList Empty 1`] = `
<div
  style={
    Object {
      "padding": "3rem",
    }
  }
>
  <div
    className="list-items"
    data-testid="loading"
  >
    <div
      className="wrapper-message"
    >
      <span
        className="icon-check"
      />
      <div
        className="title-message"
      >
        You have no tasks left
      </div>
      <div
        className="subtitle-message"
      >
        Sit back and relax
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots TaskList Loading 1`] = `
<div
  style={
    Object {
      "padding": "3rem",
    }
  }
>
  <div
    className="list-items"
    data-testid="loading"
  >
    <div
      className="loading-item"
    >
      <span
        className="glow-checkbox"
      />
      <span
        className="glow-text"
      >
        <span>
          Loading cool state
        </span>
      </span>
    </div>
    <div
      className="loading-item"
    >
      <span
        className="glow-checkbox"
      />
      <span
        className="glow-text"
      >
        <span>
          Loading cool state
        </span>
      </span>
    </div>
    <div
      className="loading-item"
    >
      <span
        className="glow-checkbox"
      />
      <span
        className="glow-text"
      >
        <span>
          Loading cool state
        </span>
      </span>
    </div>
    <div
      className="loading-item"
    >
      <span
        className="glow-checkbox"
      />
      <span
        className="glow-text"
      >
        <span>
          Loading cool state
        </span>
      </span>
    </div>
    <div
      className="loading-item"
    >
      <span
        className="glow-checkbox"
      />
      <span
        className="glow-text"
      >
        <span>
          Loading cool state
        </span>
      </span>
    </div>
    <div
      className="loading-item"
    >
      <span
        className="glow-checkbox"
      />
      <span
        className="glow-text"
      >
        <span>
          Loading cool state
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots TaskList With Pinned Items 1`] = `
<div
  style={
    Object {
      "padding": "3rem",
    }
  }
>
  <ul
    data-testid="task-list"
  >
    <li
      className="list-item TASK_PINNED"
      data-testid="task-5"
    >
      <label
        className="checkbox"
      >
        <input
          checked={false}
          data-testid="input-5"
          disabled={true}
          name="checked"
          type="checkbox"
        />
        <span
          aria-label="archiveTask-5"
          className="checkbox-custom"
          data-testid="clickable-5"
          id="archiveTask-5"
          onClick={[Function]}
        />
      </label>
      <label
        className="title"
      >
        <input
          data-testid="title-5"
          placeholder="Input title"
          readOnly={true}
          type="text"
          value="Take a break (pinned)"
        />
      </label>
      <div
        className="actions"
        onClick={[Function]}
      >
        <a
          onClick={[Function]}
        >
          <span
            aria-label="pinTask-5"
            className="icon-star"
            id="pinTask-5"
          />
        </a>
      </div>
    </li>
    <li
      className="list-item TASK_PINNED"
      data-testid="task-6"
    >
      <label
        className="checkbox"
      >
        <input
          checked={false}
          data-testid="input-6"
          disabled={true}
          name="checked"
          type="checkbox"
        />
        <span
          aria-label="archiveTask-6"
          className="checkbox-custom"
          data-testid="clickable-6"
          id="archiveTask-6"
          onClick={[Function]}
        />
      </label>
      <label
        className="title"
      >
        <input
          data-testid="title-6"
          placeholder="Input title"
          readOnly={true}
          type="text"
          value="Call your bro (pinned)"
        />
      </label>
      <div
        className="actions"
        onClick={[Function]}
      >
        <a
          onClick={[Function]}
        >
          <span
            aria-label="pinTask-6"
            className="icon-star"
            id="pinTask-6"
          />
        </a>
      </div>
    </li>
    <li
      className="list-item TASK_INBOX"
      data-testid="task-1"
    >
      <label
        className="checkbox"
      >
        <input
          checked={false}
          data-testid="input-1"
          disabled={true}
          name="checked"
          type="checkbox"
        />
        <span
          aria-label="archiveTask-1"
          className="checkbox-custom"
          data-testid="clickable-1"
          id="archiveTask-1"
          onClick={[Function]}
        />
      </label>
      <label
        className="title"
      >
        <input
          data-testid="title-1"
          placeholder="Input title"
          readOnly={true}
          type="text"
          value="Do the laundry"
        />
      </label>
      <div
        className="actions"
        onClick={[Function]}
      >
        <a
          onClick={[Function]}
        >
          <span
            aria-label="pinTask-1"
            className="icon-star"
            id="pinTask-1"
          />
        </a>
      </div>
    </li>
    <li
      className="list-item TASK_INBOX"
      data-testid="task-2"
    >
      <label
        className="checkbox"
      >
        <input
          checked={false}
          data-testid="input-2"
          disabled={true}
          name="checked"
          type="checkbox"
        />
        <span
          aria-label="archiveTask-2"
          className="checkbox-custom"
          data-testid="clickable-2"
          id="archiveTask-2"
          onClick={[Function]}
        />
      </label>
      <label
        className="title"
      >
        <input
          data-testid="title-2"
          placeholder="Input title"
          readOnly={true}
          type="text"
          value="Brush your teeth"
        />
      </label>
      <div
        className="actions"
        onClick={[Function]}
      >
        <a
          onClick={[Function]}
        >
          <span
            aria-label="pinTask-2"
            className="icon-star"
            id="pinTask-2"
          />
        </a>
      </div>
    </li>
    <li
      className="list-item TASK_INBOX"
      data-testid="task-3"
    >
      <label
        className="checkbox"
      >
        <input
          checked={false}
          data-testid="input-3"
          disabled={true}
          name="checked"
          type="checkbox"
        />
        <span
          aria-label="archiveTask-3"
          className="checkbox-custom"
          data-testid="clickable-3"
          id="archiveTask-3"
          onClick={[Function]}
        />
      </label>
      <label
        className="title"
      >
        <input
          data-testid="title-3"
          placeholder="Input title"
          readOnly={true}
          type="text"
          value="Finish this tutorial"
        />
      </label>
      <div
        className="actions"
        onClick={[Function]}
      >
        <a
          onClick={[Function]}
        >
          <span
            aria-label="pinTask-3"
            className="icon-star"
            id="pinTask-3"
          />
        </a>
      </div>
    </li>
    <li
      className="list-item TASK_INBOX"
      data-testid="task-4"
    >
      <label
        className="checkbox"
      >
        <input
          checked={false}
          data-testid="input-4"
          disabled={true}
          name="checked"
          type="checkbox"
        />
        <span
          aria-label="archiveTask-4"
          className="checkbox-custom"
          data-testid="clickable-4"
          id="archiveTask-4"
          onClick={[Function]}
        />
      </label>
      <label
        className="title"
      >
        <input
          data-testid="title-4"
          placeholder="Input title"
          readOnly={true}
          type="text"
          value="Cook lunch"
        />
      </label>
      <div
        className="actions"
        onClick={[Function]}
      >
        <a
          onClick={[Function]}
        >
          <span
            aria-label="pinTask-4"
            className="icon-star"
            id="pinTask-4"
          />
        </a>
      </div>
    </li>
  </ul>
</div>
`;
